--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="egypt">
                 <h2>egypt</h2>
             </div>
+            <div class="destination" id="alex">
+                <h2>alex</h2>
+            </div>
         </div>
     </div>
 
